--- a/src/ui/Window.ui
+++ b/src/ui/Window.ui
@@ -100,6 +100,7 @@
                         <child>
                           <object class="GtkBox" id="search_controls_wrapper">
                             <property name="spacing">4</property>
+                            <property name="visible">false</property> <!-- This is hidden while the app is loading -->
                             <child>
                               <object class="GtkSearchEntry" id="search_entry">
                                 <property name="search-delay">100</property>
@@ -137,6 +138,7 @@
                         <property name="halign">2</property>
                         <property name="valign">1</property>
                         <property name="action-name">win.add_set</property>
+                        <property name="visible">false</property> <!-- This is hidden while the app is loading -->
                         <style>
                           <class name="suggested-action" />
                         </style>
@@ -165,6 +167,13 @@
                 <property name="content">
                   <object class="GtkStack" id="main_stack">
                     <signal name="notify::visible-child-name" handler="onStackPageChange"/>
+                    <child>
+                      <object class="GtkStackPage" id="skeleton_stack_page">
+                        <property name="child">
+                          <object class="IcoSkeletonStackView"/>
+                        </property>
+                      </object>
+                    </child>
                     <child>
                       <object class="GtkStackPage">
                         <property name="title">My sets</property>
