--- a/src/ui/SkeletonStackView.ui
+++ b/src/ui/SkeletonStackView.ui
@@ -53,7 +53,7 @@
                 <property name="row-spacing">16</property>
                 <property name="column-spacing">16</property>
                 <property name="homogeneous">true</property>
-                <property name="max-children-per-line">4</property>
+                <property name="max-children-per-line">-1</property>
                 <property name="min-children-per-line">1</property>
                 <property name="selection-mode">none</property>
                 <property name="vexpand">0</property>
@@ -67,6 +67,7 @@
                         <property name="hexpand">true</property>
                         <property name="vexpand">true</property>
                         <property name="height-request">150</property>
+                        <property name="width-request">250</property>
                         <style>
                           <class name="skeleton-bg"/>
                           <class name="skeleton-opacity-1"/>
