Show an empty state when there are no sets installed. Hide the "Get more sets" label when all default sets have been installed. Handle the case where a default set's data directory already exists

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -325,3 +325,15 @@
 .opacity-0 {
   opacity: 0;
 }
+
+/* Border */
+
+.border-none {
+  border: none;
+}
+
+/* Font size */
+
+.font-size-medium {
+  font-size: 1.125rem;
+}
